# flowix-core

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
flowix/: __init__.py  __main__.py  node.py  share_manager.py  workflow.py  workflow_connection.py  workflow_history.py  workflow_message.py  workspace.py
flowix/nodes/: __init__.py  cond_nodes.py  database_node.py  dataframe_node.py  debug_node.py  exec_node.py  script_node.py  start_node.py
tests/: cli_test.sh  exported.py  for_test.py  info_test.py  nested_workflow_test.py  share_test.py  while_test.py
tests/cli/: create_test.sh  run_test.sh  test1.flowix  test1.workspace
tests/test1/: flowix.config
