[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flowix"
authors = [{name = "somehitDev", email = "this.dev.somehit@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",

    "Topic :: Database",
    "Topic :: Utilities"
]
dynamic = ["version", "description"]
requires-python = ">=3.11"
dependencies = [
    "modin[all]==0.30.1",
    "requests==2.32.3",
    "aiohttp==3.9.5",
    "openpyxl==3.1.4",
    "pyxlsb==1.0.10",
    "xlrd==2.0.1",
    "odfpy==1.4.1",

    "SQLAlchemy==2.0.30",
    "PyMySQL==1.1.1",
    "psycopg[binary,pool]==3.1.19",
    "oracledb==2.2.1",
    "pymssql==2.3.0",

    "asciinet==0.3.1"
]

[project.urls]
Source = "https://github.com/flowix-studio/flowix-core"

[project.scripts]
flowix = "flowix.__main__:run_cli"
